--- a/LogReceiverService.Wcf.Tests/LogReceiverService.Wcf.Tests.csproj
+++ b/LogReceiverService.Wcf.Tests/LogReceiverService.Wcf.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D0268955-8365-4FCE-B434-4A539E3356F9}</ProjectGuid>
+    <ProjectGuid>{CFE0139D-9C47-43FA-B5A0-DB4261824894}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NLog.WebServices</RootNamespace>
-    <AssemblyName>NLog.WebServices</AssemblyName>
+    <RootNamespace>NLog.LogReceiverService.Wcf.Tests</RootNamespace>
+    <AssemblyName>NLog.LogReceiverService.Wcf.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,25 +33,27 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Services" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\NUnit\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LogReceiverService\ILogReceiverClient.cs" />
-    <Compile Include="LogReceiverService\ILogReceiverServer.cs" />
-    <Compile Include="LogReceiverService\LogReceiverForwardingService.cs" />
-    <Compile Include="LogReceiverService\LogReceiverServiceConfig.cs" />
-    <Compile Include="LogReceiverService\NLogEvent.cs" />
-    <Compile Include="LogReceiverService\NLogEvents.cs" />
-    <Compile Include="LogReceiverService\SoapLogReceiverClient.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="LogReceiverService\StringCollection.cs" />
-    <Compile Include="LogReceiverService\WcfLogReceiverClient.cs" />
+    <Compile Include="LogReceiverService\LogReceiverServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Targets\LogReceiverWebServiceTarget.cs" />
+    <Compile Include="Targets\LogReceiverWebServiceTargetTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LogReceiverService.Wcf\LogReceiverService.Wcf.csproj">
+      <Project>{F753CDF8-D013-439A-A64F-872DD29C4E2C}</Project>
+      <Name>LogReceiverService.Wcf</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NLog.Tests\NLog.Tests.csproj">
+      <Project>{D0625344-3EF4-46AA-B793-0500C3E41316}</Project>
+      <Name>NLog.Tests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NLog\NLog.csproj">
       <Project>{CB8BE551-CB33-44A6-B793-1B266862EB25}</Project>
       <Name>NLog</Name>
