--- a/LogReceiverService/LogReceiverService.csproj
+++ b/LogReceiverService/LogReceiverService.csproj
@@ -1,15 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{097B8618-B864-4C32-9012-0AECB9A889D0}</ProjectGuid>
+    <ProjectGuid>{D0268955-8365-4FCE-B434-4A539E3356F9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NLog.WebServices.Tests</RootNamespace>
-    <AssemblyName>NLog.WebServices.Tests</AssemblyName>
+    <RootNamespace>NLog.LogReceiverService</RootNamespace>
+    <AssemblyName>NLog.LogReceiverService</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,27 +33,22 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\NUnit\nunit.framework.dll</HintPath>
-    </Reference>
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LogReceiverService\LogReceiverServiceTests.cs" />
+    <Compile Include="ILogReceiverClient.cs" />
+    <Compile Include="LogReceiverServiceConfig.cs" />
+    <Compile Include="NLogEvent.cs" />
+    <Compile Include="NLogEvents.cs" />
+    <Compile Include="SoapLogReceiverClient.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="StringCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Targets\LogReceiverWebServiceTargetTests.cs" />
+    <Compile Include="Targets\LogReceiverWebServiceTarget.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NLog.Tests\NLog.Tests.csproj">
-      <Project>{D0625344-3EF4-46AA-B793-0500C3E41316}</Project>
-      <Name>NLog.Tests</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\NLog.WebServices\NLog.WebServices.csproj">
-      <Project>{D0268955-8365-4FCE-B434-4A539E3356F9}</Project>
-      <Name>NLog.WebServices</Name>
-    </ProjectReference>
     <ProjectReference Include="..\NLog\NLog.csproj">
       <Project>{CB8BE551-CB33-44A6-B793-1B266862EB25}</Project>
       <Name>NLog</Name>
