--- a/NLog/NLog.csproj
+++ b/NLog/NLog.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -275,15 +275,11 @@
     <Compile Include="Targets\Wrappers\FallbackGroupTarget.cs" />
     <Compile Include="Targets\Wrappers\FilteringRule.cs" />
     <Compile Include="Targets\Wrappers\FilteringTargetWrapper.cs" />
-    <Compile Include="Targets\Wrappers\ImpersonatingTargetWrapper.cs" />
-    <Compile Include="Targets\Wrappers\LogOnProviderType.cs" />
     <Compile Include="Targets\Wrappers\PostFilteringTargetWrapper.cs" />
     <Compile Include="Targets\Wrappers\RandomizeGroupTarget.cs" />
     <Compile Include="Targets\Wrappers\RepeatingTargetWrapper.cs" />
     <Compile Include="Targets\Wrappers\RetryingTargetWrapper.cs" />
     <Compile Include="Targets\Wrappers\RoundRobinGroupTarget.cs" />
-    <Compile Include="Targets\Wrappers\SecurityImpersonationLevel.cs" />
-    <Compile Include="Targets\Wrappers\SecurityLogOnType.cs" />
     <Compile Include="Targets\Wrappers\SplitGroupTarget.cs" />
     <Compile Include="Targets\Wrappers\WrapperTargetBase.cs" />
   </ItemGroup>
