--- a/WinForm.Tests/WinForm.Tests.csproj
+++ b/WinForm.Tests/WinForm.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4819D4E4-5AD9-44E0-B73B-9697288EECBC}</ProjectGuid>
+    <ProjectGuid>{2CD07A9E-6744-4AA4-891B-D7E653697DD7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NLog.Database.Tests</RootNamespace>
-    <AssemblyName>NLog.Database.Tests</AssemblyName>
+    <RootNamespace>NLog.WinForm.Tests</RootNamespace>
+    <AssemblyName>NLog.WinForm.Tests</AssemblyName>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -32,22 +32,18 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="System.Configuration" />
     <Reference Include="nunit.framework">
       <HintPath>..\lib\NUnit\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Targets\DatabaseTargetTests.cs" />
+    <Compile Include="Targets\RichTextBoxTargetTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NLog.Database\NLog.Database.csproj">
-      <Project>{BACDB92F-A795-4631-8FC7-C6599D96B1BE}</Project>
-      <Name>NLog.Database</Name>
-    </ProjectReference>
     <ProjectReference Include="..\NLog.Tests\NLog.Tests.csproj">
       <Project>{D0625344-3EF4-46AA-B793-0500C3E41316}</Project>
       <Name>NLog.Tests</Name>
@@ -55,6 +51,10 @@
     <ProjectReference Include="..\NLog\NLog.csproj">
       <Project>{CB8BE551-CB33-44A6-B793-1B266862EB25}</Project>
       <Name>NLog</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WinForm\WinForm.csproj">
+      <Project>{D77119C2-746D-4A2D-B06B-AB2157F226E1}</Project>
+      <Name>WinForm</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
