--- a/AspNet.Tests/AspNet.Tests.csproj
+++ b/AspNet.Tests/AspNet.Tests.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\ConfigurationItemFactoryTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AspNet\AspNet.csproj">
