--- a/Database.Tests/Database.Tests.csproj
+++ b/Database.Tests/Database.Tests.csproj
@@ -40,8 +40,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Targets\DatabaseTargetTests.cs" />
+    <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NLog.Tests\NLog.Tests.csproj">
