--- a/LogReceiverService.Wcf.Tests/LogReceiverService.Wcf.Tests.csproj
+++ b/LogReceiverService.Wcf.Tests/LogReceiverService.Wcf.Tests.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LogReceiverService\LogReceiverServiceTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Targets\LogReceiverWebServiceTargetTests.cs" />
+    <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LogReceiverService.Wcf\LogReceiverService.Wcf.csproj">
