--- a/LogReceiverService.Wcf/LogReceiverService.Wcf.csproj
+++ b/LogReceiverService.Wcf/LogReceiverService.Wcf.csproj
@@ -45,8 +45,8 @@
     <Compile Include="NLogEvents.cs" />
     <Compile Include="StringCollection.cs" />
     <Compile Include="WcfLogReceiverClient.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Targets\LogReceiverWebServiceTarget.cs" />
+    <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NLog\NLog.csproj">
