--- a/SampleExtensions/SampleExtensions.csproj
+++ b/SampleExtensions/SampleExtensions.csproj
@@ -40,6 +40,7 @@
     <Compile Include="MyConditionMethods.cs" />
     <Compile Include="MyTarget.cs" />
     <Compile Include="WhenFooFilter.cs" />
+    <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NLog\NLog.csproj">
