--- a/WinForm/WinForm.csproj
+++ b/WinForm/WinForm.csproj
@@ -38,12 +38,12 @@
   <ItemGroup>
     <Compile Include="Internal\FormHelper.cs" />
     <Compile Include="Internal\MessageBoxHelper.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Targets\FormControlTarget.cs" />
     <Compile Include="Targets\MessageBoxTarget.cs" />
     <Compile Include="Targets\RichTextBoxRowColoringRule.cs" />
     <Compile Include="Targets\RichTextBoxTarget.cs" />
     <Compile Include="Targets\RichTextBoxWordColoringRule.cs" />
+    <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NLog\NLog.csproj">
