--- a/OverrideExtension/OverrideExtension.csproj
+++ b/OverrideExtension/OverrideExtension.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="MyTarget.cs" />
+    <Compile Include="MyFile.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
