--- a/NLog/NLog.csproj
+++ b/NLog/NLog.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Conditions\ConditionRelationalOperator.cs" />
     <Compile Include="Conditions\ConditionTokenizer.cs" />
     <Compile Include="Conditions\ConditionTokenType.cs" />
+    <Compile Include="Conditions\ConditionLazyExpression.cs" />
     <Compile Include="Config\AdvancedAttribute.cs" />
     <Compile Include="Config\AppDomainFixedOutputAttribute.cs" />
     <Compile Include="Config\ArrayParameterAttribute.cs" />
