--- a/Database.Tests/Database.Tests.csproj
+++ b/Database.Tests/Database.Tests.csproj
@@ -65,4 +65,9 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <None Include="app.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
