--- a/NLog/NLog.csproj
+++ b/NLog/NLog.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -248,7 +248,7 @@
     <Compile Include="Internal\IUsesStackTrace.cs" />
     <Compile Include="Internal\UrlHelper.cs" />
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="Internal\ISupportsLazyCast.cs" />
+    <Compile Include="Common\ISupportsLazyParameters.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
