--- a/WinForm.Tests/WinForm.Tests.csproj
+++ b/WinForm.Tests/WinForm.Tests.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -40,6 +40,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RtfParsing\RtfText.cs" />
+    <Compile Include="RtfParsing\RtfParagraph.cs" />
+    <Compile Include="RtfParsing\RtfDocument.cs" />
+    <Compile Include="RtfParsing\Token.cs" />
     <Compile Include="Targets\RichTextBoxTargetTests.cs" />
     <Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
