--- a/WinForm.Tests/WinForm.Tests.csproj
+++ b/WinForm.Tests/WinForm.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -46,6 +46,7 @@
     <Compile Include="RtfParsing\Token.cs" />
     <Compile Include="Targets\RichTextBoxTargetTests.cs" />
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="RtfParsing\RtfReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NLog.Tests\NLog.Tests.csproj">
