--- a/AspNet/AspNet.csproj
+++ b/AspNet/AspNet.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>NLog.AspNet</RootNamespace>
     <AssemblyName>NLog.AspNet</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
