--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>NLog.Database</RootNamespace>
     <AssemblyName>NLog.Database</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
