--- a/LogReceiverService.Tests/LogReceiverService.Tests.csproj
+++ b/LogReceiverService.Tests/LogReceiverService.Tests.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>NLog.LogReceiverService.Tests</RootNamespace>
     <AssemblyName>NLog.LogReceiverService.Tests</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
