--- a/LogReceiverService/LogReceiverService.csproj
+++ b/LogReceiverService/LogReceiverService.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>NLog.LogReceiverService</RootNamespace>
     <AssemblyName>NLog.LogReceiverService</AssemblyName>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
