--- a/Network.Tests/Network.Tests.csproj
+++ b/Network.Tests/Network.Tests.csproj
@@ -9,6 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>NLog.Network.Tests</RootNamespace>
     <AssemblyName>NLog.Network.Tests</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
