--- a/OverrideExtension/OverrideExtension.csproj
+++ b/OverrideExtension/OverrideExtension.csproj
@@ -9,6 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>OverrideExtension</RootNamespace>
     <AssemblyName>OverrideExtension</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
