--- a/UnixTraits/UnixTraits.csproj
+++ b/UnixTraits/UnixTraits.csproj
@@ -9,6 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>NLog.UnixTraits</RootNamespace>
     <AssemblyName>NLog.UnixTraits</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
