--- a/WinTraits/WinTraits.csproj
+++ b/WinTraits/WinTraits.csproj
@@ -9,6 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>NLog.WinTraits</RootNamespace>
     <AssemblyName>NLog.WinTraits</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
